--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact - Web Project</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <button onclick="document.getElementById('menu').hidden ^= 1">☰</button>
+        <ul id="menu" hidden>
+            <li><a href="index.html">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
+
+    <section class="contact-container">
+        <h1>Contact Us:</h1>
+        <p>If you have any questions or feedback about our project, please feel free to reach out to us. We would love to hear from you!</p>
+
+        <div class="contact-info">
+            <h2>Email:</h2>
+            <p>You can email me at: <a href="mailto:midhunmanesh01@gmail.com">midhunmanesh01@gmail.com</a></p>
+            <h2>Phone:</h2> 
+            <p>You can also call me at: <a href="tel:+918590392681">+91 8590392681</a></p> 
+            <h2>About Me:</h2> 
+            <p>I'm a student at College of Engineering, Chengannur, passionate about web development.! I'm learning new skills through building real projects and love taking on coding challenges.
+        </div> 
+    </section>
+           
+        <footer class="about-footer">
+            <p>Created with <span class="heart">♥</span> by Midhun Manesh</p>
+        </footer>
 </body>
 </html>
