--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 
         </form>        
     </div>
+    <footer class="about-footer">
+            <p>Created with <span class="heart">♥</span> by Midhun Manesh</p>
+        </footer>
 </body>
 </html>
