--- a/about.html
+++ b/about.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+    <div class="navbar">
+        <button onclick="document.getElementById('menu').hidden ^= 1">☰</button>
+        <ul id="menu" hidden>
+            <li><a href="index.html">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
     <section class="about-container">
         <div class="about-content">
             <h1>About This Project</h1>
