Added welcome alerts to home and login pages

--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
+    <script>
+       alert("Welcome to the Home Page!.");
+    </script>
     <div class="navbar">
         <button onclick="document.getElementById('menu').hidden ^= 1">☰</button>
         <ul id="menu" hidden>
