--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script>
+       alert("Please enter your name and click submit to continue!.");
+    </script>
     <div class="navbar">
         <button onclick="document.getElementById('menu').hidden ^= 1">☰</button>
         <ul id="menu" hidden>
