Update homepage alert message to indicate construction status

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-       alert("Welcome to the Home Page!.");
+       alert("Homepage Under Construction!.");
     </script>
     <div class="navbar">
         <button onclick="document.getElementById('menu').hidden ^= 1">☰</button>
