Updated QR Code Generator heading and enhance button hover styles

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <p>This page is currently under construction. Please check back later for updates.</p>
     </div>
     <div class="qr-code">
-        <h2>QRCODE Generator</h2>
+        <h2> Qr Code Generator</h2>
         <p>Click the button below to generate a QR code.</p>
         <button type="button" onclick="window.location.href='qrcode.html'">Generate QR Code</button>
     </div>
