--- a/qrcode.html
+++ b/qrcode.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-    <p>Enter text or url to generate QR code:</p>
+    <h1>Enter text or url to generate QR code:</h1>
     <input type="text" placeholder="Enter Text / URL" id="text">
     <button onclick="generateQR()">Generate QR Code</button>
     </div>
