Updated login form labels and adjust styles for improved UI consistency

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="login">
         <form>
             <h1>Login</h1>
-             <label>Username</label>
+             <label>Username:</label>
             <input type="text" placeholder="Enter username">
-            <label>Password</label>
+            <label>Password:</label>
             <input type="password" placeholder="Enter password">
            <button type="button" onclick="window.location.href='home.html'">Submit</button>
 
